# ACCV2016DGPTutorial

./: CMakeLists.txt  ConfigExercices.h.in  README.md  appveyor.yml  index.html  params.json  pltScaleProfile  tuto1_readInput.cpp
Samples/: accFlow.sdp  contourT.sdp  ellipseBruit.sdp  flower.sdp
exercise1baseDGtal/: CMakeLists.txt  README.md
exercise1baseDGtal/results/: resultTuto1.eps
exercise2LSC/: CMakeLists.txt
exercise2LSC/results/: resultTuto2questions1-4.eps  resultTuto2questions1-4bis.eps
tuto1_baseDGtal/: CMakeLists.txt  README.md  exercise1baseDGtal.cpp  tuto1_baseDGtal.cpp
tuto2_LSC/: CMakeLists.txt  README.md  exercise2LSC.cpp  tuto2_LSC.cpp
tuto2_LSC/results/: resultTuto2questions5-6bis.eps
tuto3_curvatures/: CMakeLists.txt  README.md  tuto3_curvature.cpp
tuto4_compATS/: CMakeLists.txt  README.md  tuto4_CompATS.cpp  tuto4_compATS.cpp
tuto4_compATS/results/: resultTuto4CompATS.eps
tuto5_compATSTC/: CMakeLists.txt  README.md  tuto5_compATSTC.cpp
tuto5_compATSTC/results/: resultTuto5CompATSTC.eps
tuto6_compMT/: CMakeLists.txt  README.md  pltScaleProfile  tuto6_compMT1pt.cpp  tuto6_compMTAllpt.cpp
tuto6_compMT/results/: resultTuto6MT.eps  scaleProfile.eps
